adicionando novos testes e melhorando os testes de criação de usuario, adicionando criticidade e ordenação