@@ -8,13 +8,16 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.everyItem;
 import static org.hamcrest.Matchers.greaterThan;
-import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 import static org.hamcrest.Matchers.hasKey;
-import static org.hamcrest.Matchers.matchesPattern;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import io.qameta.allure.Allure;
+import io.qameta.allure.Severity;
+import io.qameta.allure.SeverityLevel;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.TestInstance.Lifecycle;
@@ -26,12 +29,101 @@ import io.restassured.response.Response;
 import restassured_serverest.BaseApiTest;
 import restassured_serverest.utils.FakerUtils;
 
+
+/**
+ * Testes de API do end point de /users
+ * Temos uma documentação detalhada em TESTING_API.MD
+ * Os testes seguem a lógica do CRUD, com criação, leitura, atualização e exclusão de usuários.
+ * Além disso, temos testes Negativos como e-mail duplicado;
+ */
+
 @TestInstance(Lifecycle.PER_CLASS)
 @Execution(ExecutionMode.CONCURRENT)
-public class UsersRestAssuredTest extends BaseApiTest {
+public class UsersFeatureTests extends BaseApiTest {
 
     @Test
-    @DisplayName("CT01 - Listar todos os usuários e validar estrutura JSON")
+    @Order(1)
+    @Severity(SeverityLevel.BLOCKER)
+    @DisplayName("CT01 - Criação de um novo usuário padrão, com administrador igual a false")
+    void createNormalUser() {
+        final String email = FakerUtils.randomEmail();
+        final String name = FakerUtils.randomName();
+        final String password = FakerUtils.randomPassword();
+        final String administrador = "false";
+
+        final String body = bodyPayload(name, email, password, administrador);
+
+        final Response createResponse = givenWithAllure()
+                .contentType(ContentType.JSON)
+                .basePath(ROTA_USUARIOS)
+                .body(body)
+                .when()
+                .post()
+                .then()
+                .statusCode(201)
+                .body(KEY_MESSAGE, equalTo("Cadastro realizado com sucesso"))
+                .body(KEY_ID, notNullValue())
+                .extract().response();
+
+        final String newUserId = createResponse.path(KEY_ID);
+
+        givenWithAllure()
+                .basePath(ROTA_USUARIOS + "/" + newUserId)
+                .when()
+                .get()
+                .then()
+                .statusCode(200)
+                .body(KEY_NOME, equalTo(name))
+                .body(KEY_EMAIL, equalTo(email))
+                .body(KEY_PASSWORD, equalTo(password))
+                .body(KEY_ADMINISTRADOR, equalTo(administrador));
+    }
+
+    @Test
+    @Order(2)
+    @Severity(SeverityLevel.BLOCKER)
+    @DisplayName("CT02 - Criação de um novo usuário Administrador, com administrador igual a true")
+    void createAdminUser() {
+        final String email = FakerUtils.randomEmail();
+        final String name = FakerUtils.randomName();
+        final String password = FakerUtils.randomPassword();
+        final String administrador = "true";
+
+        final String body = bodyPayload(name, email, password, administrador);
+
+        final Response createResponse = givenWithAllure()
+                .contentType(ContentType.JSON)
+                .basePath(ROTA_USUARIOS)
+                .body(body)
+                .when()
+                .post()
+                .then()
+                .statusCode(201)
+                .body(KEY_MESSAGE, equalTo("Cadastro realizado com sucesso"))
+                .body(KEY_ID, notNullValue())
+                .extract().response();
+
+        final String newUserId = createResponse.path(KEY_ID);
+
+        final Response searchUser = givenWithAllure()
+                .basePath(ROTA_USUARIOS + "/" + newUserId)
+                .when()
+                .get()
+                .then()
+                .statusCode(200)
+                .body(KEY_NOME, equalTo(name))
+                .body(KEY_EMAIL, equalTo(email))
+                .body(KEY_PASSWORD, equalTo(password))
+                .body(KEY_ADMINISTRADOR, equalTo(administrador))
+                .extract().response();
+
+        Allure.step("Body Result: " + searchUser.body().print());
+    }
+
+    @Test
+    @Order(3)
+    @Severity(SeverityLevel.CRITICAL)
+    @DisplayName("CT03 - Listar todos os usuários e validar estrutura JSON")
     void listAllUsersAndValidateStructure() {
         final Response response = givenWithAllure()
                 .basePath(ROTA_USUARIOS)
@@ -49,19 +141,15 @@ public class UsersRestAssuredTest extends BaseApiTest {
 
         assertThat(usuarios, everyItem(hasKey(KEY_NOME)));
         assertThat(usuarios, everyItem(hasKey(KEY_EMAIL)));
-        assertThat(usuarios, everyItem(hasKey("password")));
+        assertThat(usuarios, everyItem(hasKey(KEY_PASSWORD)));
         assertThat(usuarios, everyItem(hasKey(KEY_ADMINISTRADOR)));
         assertThat(usuarios, everyItem(hasKey(KEY_ID)));
-
-        final List<String> emails = usuarios.stream()
-                .map(u -> String.valueOf(u.get(KEY_EMAIL)))
-                .collect(Collectors.toList());
-
-        assertThat(emails, everyItem(matchesPattern(".+@.+\\..+")));
     }
 
     @Test
-    @DisplayName("CT02 - Buscar usuário específico por ID")
+    @Order(4)
+    @Severity(SeverityLevel.NORMAL)
+    @DisplayName("CT04 - Buscar usuário específico por ID")
     void getUserById() {
         final Response listResponse = givenWithAllure()
                 .basePath(ROTA_USUARIOS)
@@ -85,20 +173,21 @@ public class UsersRestAssuredTest extends BaseApiTest {
     }
 
     @Test
-    @DisplayName("CT03 - Criar um novo usuário com validações completas")
-    void createUser() {
-        final String email = FakerUtils.randomEmail();
-        final String name = FakerUtils.randomName();
-        final String password = FakerUtils.randomPassword();
+    @Order(5)
+    @Severity(SeverityLevel.BLOCKER)
+    @DisplayName("CT05 - Atualização de um usuário Administrador, com administrador igual a true")
+    void updateAdminUser() {
+        String email = FakerUtils.randomEmail();
+        String name = FakerUtils.randomName();
+        String password = FakerUtils.randomPassword();
+        String administrador = "true";
 
-        final String payload = String.format(
-                "{\n  \"nome\": \"%s\",\n  \"email\": \"%s\",\n  \"password\": \"%s\",\n  \"administrador\": \"true\"\n}",
-                name, email, password);
+        final String body = bodyPayload(name, email, password, administrador);
 
         final Response createResponse = givenWithAllure()
                 .contentType(ContentType.JSON)
                 .basePath(ROTA_USUARIOS)
-                .body(payload)
+                .body(body)
                 .when()
                 .post()
                 .then()
@@ -109,6 +198,22 @@ public class UsersRestAssuredTest extends BaseApiTest {
 
         final String newUserId = createResponse.path(KEY_ID);
 
+        email = FakerUtils.randomEmail();
+        name = FakerUtils.randomName();
+        password = FakerUtils.randomPassword();
+        final String bodyUpdate = bodyPayload(name, email, password, administrador);
+
+        final Response updateResponse = givenWithAllure()
+                .contentType(ContentType.JSON)
+                .basePath(ROTA_USUARIOS + "/" + newUserId)
+                .body(bodyUpdate)
+                .when()
+                .put()
+                .then()
+                .statusCode(200)
+                .body(KEY_MESSAGE, equalTo("Registro alterado com sucesso"))
+                .extract().response();
+
         givenWithAllure()
                 .basePath(ROTA_USUARIOS + "/" + newUserId)
                 .when()
@@ -116,16 +221,189 @@ public class UsersRestAssuredTest extends BaseApiTest {
                 .then()
                 .statusCode(200)
                 .body(KEY_NOME, equalTo(name))
-                .body(KEY_EMAIL, equalTo(email));
+                .body(KEY_EMAIL, equalTo(email))
+                .body(KEY_PASSWORD, equalTo(password))
+                .body(KEY_ADMINISTRADOR, equalTo(administrador))
+                .extract().response();
+
+        Allure.step("Body Result: " + updateResponse.body().print());
+    }
+
+
+    @Test
+    @Order(6)
+    @Severity(SeverityLevel.BLOCKER)
+    @DisplayName("CT06 - Atualização de um usuário Padrão, com administrador igual a false")
+    void updateNormalUser() {
+        String email = FakerUtils.randomEmail();
+        String name = FakerUtils.randomName();
+        String password = FakerUtils.randomPassword();
+        String administrador = "false";
+
+        final String body = bodyPayload(name, email, password, administrador);
+
+        final Response createResponse = givenWithAllure()
+                .contentType(ContentType.JSON)
+                .basePath(ROTA_USUARIOS)
+                .body(body)
+                .when()
+                .post()
+                .then()
+                .statusCode(201)
+                .body(KEY_MESSAGE, equalTo("Cadastro realizado com sucesso"))
+                .body(KEY_ID, notNullValue())
+                .extract().response();
+
+        final String newUserId = createResponse.path(KEY_ID);
+
+        email = FakerUtils.randomEmail();
+        name = FakerUtils.randomName();
+        password = FakerUtils.randomPassword();
+        final String bodyUpdate = bodyPayload(name, email, password, administrador);
+
+        final Response updateResponse = givenWithAllure()
+                .contentType(ContentType.JSON)
+                .basePath(ROTA_USUARIOS + "/" + newUserId)
+                .body(bodyUpdate)
+                .when()
+                .put()
+                .then()
+                .statusCode(200)
+                .body(KEY_MESSAGE, equalTo("Registro alterado com sucesso"))
+                .extract().response();
+
+        givenWithAllure()
+                .basePath(ROTA_USUARIOS + "/" + newUserId)
+                .when()
+                .get()
+                .then()
+                .statusCode(200)
+                .body(KEY_NOME, equalTo(name))
+                .body(KEY_EMAIL, equalTo(email))
+                .body(KEY_PASSWORD, equalTo(password))
+                .body(KEY_ADMINISTRADOR, equalTo(administrador))
+                .extract().response();
+
+        Allure.step("Body Result: " + updateResponse.body().print());
     }
 
     @Test
-    @DisplayName("CT05 - Validar mensagens de erro ao criar e-mail duplicado")
+    @Order(7)
+    @Severity(SeverityLevel.BLOCKER)
+    @DisplayName("CT07 - Valida Exclusão de um usuário Administrador, com administrador igual a true")
+    void deleteAdminUser() {
+        String email = FakerUtils.randomEmail();
+        String name = FakerUtils.randomName();
+        String password = FakerUtils.randomPassword();
+        String administrador = "true";
+
+        final String body = bodyPayload(name, email, password, administrador);
+
+        final Response createResponse = givenWithAllure()
+                .contentType(ContentType.JSON)
+                .basePath(ROTA_USUARIOS)
+                .body(body)
+                .when()
+                .post()
+                .then()
+                .statusCode(201)
+                .body(KEY_MESSAGE, equalTo("Cadastro realizado com sucesso"))
+                .body(KEY_ID, notNullValue())
+                .extract().response();
+
+        final String newUserId = createResponse.path(KEY_ID);
+
+        email = FakerUtils.randomEmail();
+        name = FakerUtils.randomName();
+        password = FakerUtils.randomPassword();
+        final String bodyUpdate = bodyPayload(name, email, password, administrador);
+
+        final Response updateResponse = givenWithAllure()
+                .contentType(ContentType.JSON)
+                .basePath(ROTA_USUARIOS + "/" + newUserId)
+                .body(bodyUpdate)
+                .when()
+                .delete()
+                .then()
+                .statusCode(200)
+                .body(KEY_MESSAGE, equalTo("Registro excluído com sucesso"))
+                .extract().response();
+
+        givenWithAllure()
+                .basePath(ROTA_USUARIOS + "/" + newUserId)
+                .when()
+                .get()
+                .then()
+                .statusCode(400)
+                .body(KEY_MESSAGE, equalTo("Usuário não encontrado"))
+                .extract().response();
+
+        Allure.step("Body Result: " + updateResponse.body().print());
+    }
+
+    @Test
+    @Order(8)
+    @Severity(SeverityLevel.BLOCKER)
+    @DisplayName("CT08 - Valida Exclusão de um usuário Padrão, com administrador igual a false")
+    void deleteNormalUser() {
+        String email = FakerUtils.randomEmail();
+        String name = FakerUtils.randomName();
+        String password = FakerUtils.randomPassword();
+        String administrador = "false";
+
+        final String body = bodyPayload(name, email, password, administrador);
+
+        final Response createResponse = givenWithAllure()
+                .contentType(ContentType.JSON)
+                .basePath(ROTA_USUARIOS)
+                .body(body)
+                .when()
+                .post()
+                .then()
+                .statusCode(201)
+                .body(KEY_MESSAGE, equalTo("Cadastro realizado com sucesso"))
+                .body(KEY_ID, notNullValue())
+                .extract().response();
+
+        final String newUserId = createResponse.path(KEY_ID);
+
+        email = FakerUtils.randomEmail();
+        name = FakerUtils.randomName();
+        password = FakerUtils.randomPassword();
+        final String bodyUpdate = bodyPayload(name, email, password, administrador);
+
+        final Response updateResponse = givenWithAllure()
+                .contentType(ContentType.JSON)
+                .basePath(ROTA_USUARIOS + "/" + newUserId)
+                .body(bodyUpdate)
+                .when()
+                .delete()
+                .then()
+                .statusCode(200)
+                .body(KEY_MESSAGE, equalTo("Registro excluído com sucesso"))
+                .extract().response();
+
+        givenWithAllure()
+                .basePath(ROTA_USUARIOS + "/" + newUserId)
+                .when()
+                .get()
+                .then()
+                .statusCode(400)
+                .body(KEY_MESSAGE, equalTo("Usuário não encontrado"))
+                .extract().response();
+
+        Allure.step("Body Result: " + updateResponse.body().print());
+    }
+
+
+
+    @Test
+    @Order(9)
+    @Severity(SeverityLevel.NORMAL)
+    @DisplayName("CT09 - Cenário Negativo - Validar mensagens de erro ao criar e-mail duplicado")
     void duplicateEmailValidation() {
         final String duplicateEmail = FakerUtils.randomEmail();
-
-        final String user1 = "{\n  \"nome\": \"User 1\",\n  \"email\": \"" + duplicateEmail
-                + "\",\n  \"password\": \"senha123\",\n  \"administrador\": \"false\"\n}";
+        final String user1 = bodyEmail(duplicateEmail);
 
         givenWithAllure()
                 .contentType(ContentType.JSON)
@@ -136,8 +414,7 @@ public class UsersRestAssuredTest extends BaseApiTest {
                 .then()
                 .statusCode(201);
 
-        final String user2 = "{\n  \"nome\": \"User 2\",\n  \"email\": \"" + duplicateEmail
-                + "\",\n  \"password\": \"anotherpassword\",\n  \"administrador\": \"true\"\n}";
+        final String user2 = bodyEmail(duplicateEmail);
 
         givenWithAllure()
                 .contentType(ContentType.JSON)
@@ -152,10 +429,13 @@ public class UsersRestAssuredTest extends BaseApiTest {
     }
 
     @Test
-    @DisplayName("CT04 - Validações JSON avançadas com filtros")
+    @Order(10)
+    @Severity(SeverityLevel.NORMAL)
+    @DisplayName("CT10 - Cenário Negativo - Validar se existe retorno de erro ao buscar usuário inexistente")
     void advancedJsonValidationsWithFilters() {
         final Response response = givenWithAllure()
                 .basePath(ROTA_USUARIOS)
+                .param(KEY_ADMINISTRADOR, "true")
                 .when()
                 .get()
                 .then()
@@ -166,7 +446,7 @@ public class UsersRestAssuredTest extends BaseApiTest {
 
         final List<Map<String, Object>> admins = usuarios.stream()
                 .filter(u -> "true".equals(String.valueOf(u.get(KEY_ADMINISTRADOR))))
-                .collect(Collectors.toList());
+                .toList();
 
         assertThat(admins.size(), greaterThan(0));
 
@@ -180,34 +460,18 @@ public class UsersRestAssuredTest extends BaseApiTest {
                 .collect(Collectors.toList());
 
         assertThat(emails, everyItem(notNullValue()));
-    }
-
-    @Test
-    @DisplayName("CT06 - Validar busca por parâmetro administrador")
-    void validateWithFuzzyMatching() {
-        final Response response = givenWithAllure()
-                .basePath(ROTA_USUARIOS)
-                .param(KEY_ADMINISTRADOR, "true")
-                .when()
-                .get()
-                .then()
-                .statusCode(200)
-                .extract().response();
-
-        final int quantidade = response.path("quantidade");
-        final List<Map<String, Object>> usuarios = response.path("usuarios");
-
-        assertThat(quantidade, greaterThanOrEqualTo(0));
 
         for (final Map<String, Object> user : usuarios) {
             assertThat(user.get("nome"), notNullValue());
             assertThat(user.get("email"), notNullValue());
-            assertThat(String.valueOf(user.get("administrador")), equalTo("true"));
+            assertThat(String.valueOf(user.get(KEY_ADMINISTRADOR)), equalTo("true"));
         }
     }
 
     @Test
-    @DisplayName("CT07 - Validações condicionais baseadas em valores")
+    @Order(11)
+    @Severity(SeverityLevel.NORMAL)
+    @DisplayName("CT11 - Cenário Negativo - Validações condicionais baseadas em valores")
     void conditionalValidationsBasedOnValues() {
         final Response response = givenWithAllure()
                 .basePath(ROTA_USUARIOS)
@@ -219,9 +483,6 @@ public class UsersRestAssuredTest extends BaseApiTest {
 
         final Map<String, Object> user = response.path("usuarios[0]");
 
-        final String adminFlag = String.valueOf(user.get(KEY_ADMINISTRADOR));
-        assertTrue("true".equals(adminFlag) || "false".equals(adminFlag));
-
         final String email = String.valueOf(user.get(KEY_EMAIL));
         final String password = String.valueOf(user.get("password"));
 
@@ -230,39 +491,9 @@ public class UsersRestAssuredTest extends BaseApiTest {
     }
 
     @Test
-    @DisplayName("CT08 - Validar formatos com expressões regulares")
-    void validateFormatsWithRegularExpressions() {
-        final String newEmail = "test.regex." + System.currentTimeMillis() + "@example.com";
-
-        final String userData = String.format(
-                "{\n  \"nome\": \"%s\",\n  \"email\": \"%s\",\n  \"password\": \"%s\",\n  \"administrador\": \"false\"\n}",
-                "Regex Test", newEmail, "StrongPassword@123");
-
-        final Response createResponse = givenWithAllure()
-                .contentType(ContentType.JSON)
-                .basePath(ROTA_USUARIOS)
-                .body(userData)
-                .when()
-                .post()
-                .then()
-                .statusCode(201)
-                .extract().response();
-
-        final String userId = createResponse.path(KEY_ID);
-
-        givenWithAllure()
-                .basePath(ROTA_USUARIOS + "/" + userId)
-                .when()
-                .get()
-                .then()
-                .statusCode(200)
-                .body("email", matchesPattern(".+@.+\\..+"))
-                .body("nome", matchesPattern("[A-Za-z\\s]+"))
-                .body("_id", matchesPattern("[A-Za-z0-9]+"));
-    }
-
-    @Test
-    @DisplayName("CT09 - Validar ausência de campos não mapeados")
+    @Order(12)
+    @Severity(SeverityLevel.MINOR)
+    @DisplayName("CT12 - Cenário Negativo - Validar ausência de campos não mapeados")
     void validateAbsenceOfFields() {
         final Response response = givenWithAllure()
                 .basePath(ROTA_USUARIOS)
@@ -281,7 +512,9 @@ public class UsersRestAssuredTest extends BaseApiTest {
     }
 
     @Test
-    @DisplayName("CT11 - Preparar dados para validação de cadastro")
+    @Order(13)
+    @Severity(SeverityLevel.MINOR)
+    @DisplayName("CT13 - Cenário Negativo - Preparar dados para validação de cadastro")
     void prepareDataForNestedObjectValidation() {
         final String complexEmail = FakerUtils.randomEmail();
 
@@ -309,7 +542,9 @@ public class UsersRestAssuredTest extends BaseApiTest {
     }
 
     @Test
-    @DisplayName("CT14 - Impedir exclusão de usuário que possui carrinho associado")
+    @Order(14)
+    @Severity(SeverityLevel.CRITICAL)
+    @DisplayName("CT14 - Cenário Negativo - Impedir exclusão de usuário que possui carrinho associado")
     void preventDeletingUserThatHasAssociatedCart() {
         final String userEmail = FakerUtils.randomEmail();
         final String userPassword = "SenhaSegura@123";
@@ -396,7 +631,9 @@ public class UsersRestAssuredTest extends BaseApiTest {
     }
 
     @Test
-    @DisplayName("CT15 - Buscar usuário por ID inválido deve retornar 400")
+    @Order(15)
+    @Severity(SeverityLevel.MINOR)
+    @DisplayName("CT15 - Cenário Negativo - Buscar usuário por ID inválido deve retornar 400")
     void userByInvalidIdShouldReturn400() {
         givenWithAllure()
                 .basePath(ROTA_USUARIOS + "/3F7K9P2XQ8M1R6TB")
@@ -408,7 +645,9 @@ public class UsersRestAssuredTest extends BaseApiTest {
     }
 
     @Test
-    @DisplayName("CT16 - Impedir atualização de usuário com e-mail duplicado")
+    @Order(16)
+    @Severity(SeverityLevel.NORMAL)
+    @DisplayName("CT16 - Cenário Negativo - Impedir atualização de usuário com e-mail duplicado")
     void preventUpdatingUserWithDuplicateEmail() {
         final String email1 = FakerUtils.randomEmail();
         final String email2 = FakerUtils.randomEmail();
